@@ -1,6 +1,7 @@
 module github.com/slok/go-http-metrics
 
 require (
+	github.com/julienschmidt/httprouter v1.2.0
 	github.com/prometheus/client_golang v0.9.2
 	github.com/stretchr/testify v1.2.2
 	github.com/urfave/negroni v1.0.0
