@@ -1,5 +1,7 @@
 ## 0.x.x / 2019-xx-xx
 
+* [FEATURE] Add httprouter compatible middleware.
+* [FEATURE] Add Negroni compatible middleware.
 * [FEATURE] Add option to group by status codes.
 * [FEATURE] Add predefined handler label.
 * [FEATURE] Add URL infered handler label.
